--- a/apigateway/code/package.json
+++ b/apigateway/code/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node start.js",
     "dev": "nodemon start.js",
     "dev win": "./node_modules/.bin/nodemon start.js"
   },
